--- a/MIC_MAID_course/23-Bin_quality.Rmd
+++ b/MIC_MAID_course/23-Bin_quality.Rmd
@@ -10,7 +10,8 @@ This can be used on assemblies produced from single cell, single isolate, or met
 ## Workflow concept
 
 The tool utilises protein domain families from the Pfam database.
-A protein domain is a region of a protein that folds independently from the rest and they vary in length from ~50-250 amino acids.
+A protein domain is a region of a protein that folds independently from the rest of the protein.
+They vary in length from ~50-250 amino acids.
 Many proteins consist of several domains and a domain can appear in many different proteins.
 
 `CoCoPyE` estimates quality of a genome by estimating completeness and contamination through an input-preprocessing step followed by a two stage prediction step. 
@@ -31,6 +32,8 @@ For full details please see the CoCoPyE publication: https://academic.oup.com/gi
 A protein domain search is carried out on all translated open reading frames of our our query genomes, MAGs/bins in our case.
 The Pfam protein database is used and the tool produces protein domain counts for our query genomes.
 
+The completeness of the query genome is estimated based on one of 2 universal marker sets.
+The universal marker sets contain the protein domains found in either all reference bacterial genomes or all reference archaeal genomes.
 Query genomes (MAGS/bins) with a completeness score <10% are rejected and removed from further analysis.
 
 ### Stage I
